Layout text along arc

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
 <label>bezier accuracy <span title="0.5 = accurate to half a pixel &#013;.001 = accurate to 1/1000th of a pixel &#013;smaller numbers take longer to compute &#013;leave blank for auto">&#128712;</span> : <input type="text" id="input-bezier-accuracy" placeholder="auto" /></label>
 
+<label>arc radius: <input type="number" id="input-arc-radius" value="100" /></label>
+
+<label>arc start angle: <input type="number" id="input-arc-start-angle" value="45" /></label>
+
+<label>arc end angle: <input type="number" id="input-arc-end-angle" value="135" /></label>
+
 <div id="svg-render"></div>
 
 <textarea id="output-svg"></textarea>
